Design Issues Fixing

--- a/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
+++ b/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
@@ -2,7 +2,7 @@
 <section class="section login-section">
   <div class="container">
     <div class="row">
-      <div class="col-xl-8 d-none d-lg-block d-xl-block pt-4 pr-5">
+      <div class="col-xl-8 col-lg-8 col-md-12 d-none d-lg-block d-xl-block pt-4 pr-5">
         <div style="position:absolute; right:5px;"><img src="assets/images/sapw-newbanner-global-img.png" class="img-fluid" ></div>
         <ul id="scene" >
           <li class="layer" style="width:110%;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img1.png" class="img-fluid"></li>
