--- a/frontend/src/app/modules/features/common/home/home.component.css
+++ b/frontend/src/app/modules/features/common/home/home.component.css
@@ -21,7 +21,40 @@
   background-color: #eee; /* Add a hover effect to all links, except for headers */
 }
 
-
+.empl-btn {
+    color: #ffffff;
+    border-color: #ffffff;
+    border-radius: 10px!important;
+}
+.empl-btn:hover {
+    color: #34538d;
+    background-color: #ffffff;
+    border-color: #ffffff;
+}
+.empl-btn {
+    padding: .6rem 1.75rem;
+    font-size: 1.0rem;
+    line-height: 1.75;
+    border-radius: 10px;
+}
+.tale-btn:hover {
+    color: #ffe871;
+    background-color: #000000;
+    border-color: #000000;
+	padding: .6rem 1.75rem;
+    font-size: 1.0rem;
+    line-height: 1.75;
+    border-radius: 10px;
+}
+.tale-btn {
+    color: #000000;
+    border-color: #000000;
+    border-radius: 10px!important;
+	padding: .6rem 1.75rem;
+    font-size: 1.0rem;
+    line-height: 1.75;
+    border-radius: 10px;
+}
 mark { background-color:pink; }
 
 
