--- a/frontend/src/app/modules/features/common/home/home.component.html
+++ b/frontend/src/app/modules/features/common/home/home.component.html
@@ -1,114 +1,61 @@
-<!-- Banner Section -->
-<section class="theme-banner">
-  <div class="container">
-    <div class="find-banner w-60">
+    <!-- Header Section
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-light theme-nav">
+			<div class="container-fluid">
+				<a href="#" class="navbar-brand"><img src="assets/images/logo.png"/></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav ml-auto ">
+					   <li class="nav-item dropdown bg-white">
+						<a class="btn btn-sm btn-outline-primary px-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="margin-top:23px;">						 
+							<li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/employer/login')"  type="button">Employer</a></li>								
+							<li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/user/login')"  type="button">Jobseeker</a></li>								
+						</ul>
+					  </li>
+					</ul>
+					<ul class="navbar-nav ml-2">
+					  <li class="nav-item">
+						<a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-linkedin-in"></i></a>
+					  </li>	
+					  <li class="nav-item">
+						<a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-twitter"></i></a>
+					  </li>	
+					  <li class="nav-item">
+						<a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-facebook-f" style="width:12.25px;"></i></a>
+					  </li>	
+					</ul>
+				</div>
+		    </div>
+		</nav>
+    </header>-->
 
-      <h1 class="banner-title text-center">{{ 'home.title' | translate}}.</h1>
-      <form class="find-bar" method="post" (ngSubmit)="onRedirect()" #searchNgForm="ngForm" [formGroup]="searchForm">
-        <span *ngIf="searchForm?.errors?.atLeastOne && searchNgForm?.submitted"
-          class="d-flex justify-content-center pb-2 text-danger">At least one field
-          has to be provided.</span>
-        <div class="row">
-          <div class="col-lg-6 col-md-6 mb-3">
-            <ng-select
-            class="search-skill"
-    [items]="movies$ | async"
-    bindLabel="tag"
-    [multiple]="true"
-    [trackByFn]="trackByFn"
-    [minTermLength]="minLengthTerm"
-    [loading]="moviesLoading"
-    placeholder="SAP Module"
-    typeToSearchText="Please enter {{minLengthTerm}} or more characters" [typeahead]="moviesInput$"
-    formControlName="search">
-    <ng-template ng-label-tmp let-item="item" let-clear="clear">
-      {{utilsHelperService.onSplitTag(item.tag)}}
-      <span class="ng-value-icon right" (click)="clear(item)">×</span>
-  </ng-template>
-    <ng-template ng-option-tmp let-item="item" let-index="index" let-search="searchTerm">
-      {{utilsHelperService.onSplitTag(item.tag)}}
-    </ng-template>
-  </ng-select>
-          </div>
-          <div class="col-lg-6 col-md-6 mb-3">
-            <div class="input-with-icon">
-              <input formControlName="location"  type="text"
-                  class="form-control" placeholder="City, State" value="">
-              <i class="fas fa-map-marker-alt"></i>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6">
-            <button type="submit" class="btn btn-block btn-theme-blue btn-lg">
-              <span *ngIf="(!loggedUserInfo?.isLoggedIn || (loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(0)))">
-                {{"home.findJobs" | translate}}
-              </span>
-              <span *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1)">{{"home.findCandidates" | translate}}</span>
-            </button>
-          </div>
-        </div>
-      </form>
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h5 class="font-weight-bold ">
-            <a class="text-dark" href="javascript:;">USA <span class="mx-2">|</span></a>
-            <a class="text-dark" href="javascript:;">Europe <span class="mx-2">|</span></a>
-            <a class="text-dark" href="javascript:;">Asia Pacific <span class="mx-2">|</span></a>
-            <a class="text-dark" href="javascript:;">South America </a>
-          </h5>
-        </div>
-      </div>
-      <div class="row mt-4">
-        <div class="col-lg-12 text-center">
-          <a *ngIf="!loggedUserInfo?.isLoggedIn" [routerLink]="['/employer/post-job']"
-            class="btn btn-outline-blue font-weight-bold py-2 px-4 mr-1" href="javascript:;">{{"home.postJob" |
-            translate}} </a>
-          <a *ngIf="!loggedUserInfo?.isLoggedIn" [routerLink]="['/user/create-candidate']"
-            class="btn btn-outline-green font-weight-bold py-2 px-4" href="javascript:;">{{"home.postResume" |
-            translate}} </a>
-          <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(0)"
-            [routerLink]="['/user/dashboard']" [queryParams]="{activeTab: 'matches'}" class="btn btn-outline-blue font-weight-bold py-2 px-4 mr-1"
-            href="javascript:;">{{"dashboard.matches" | translate}} </a>
-          <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1)"
-            [routerLink]="['/employer/dashboard']" [queryParams]="{activeTab: 'matches'}" class="btn btn-outline-green font-weight-bold py-2 px-4"
-            href="javascript:;">{{"dashboard.matches" | translate}} </a>
-        </div>
-      </div>
-    </div>
-  </div>
+<!-- Landing Page-->
+<section class="landing-section">
+	<div class="container-fluid">
+		<div class="landing-content">
+			<div class="row">	
+				<div class="col-lg-6">			
+					<div class="left-sec animate__animated  animate__fadeInLeft">					
+						<h1>Employer</h1>
+						<p>Get used to the hassle-free Talent finding Platform. Get real time matches in no time! </p>
+						<a (click)="onRedirectUrl('/auth/employer/login')" class="btn empl-btn my-3">Get Started</a>
+					</div>
+				</div>
+				<div class="col-lg-6">	
+					<div class="right-sec animate__animated  animate__fadeInRight">						
+						<h1>Talent</h1>
+						<p>When we say matching jobs, we literally meant matches</p>
+						<a (click)="onRedirectUrl('/auth/user/login')"  class="btn tale-btn my-3">Get Started</a>
+					</div>
+				</div>	
+			</div>
+		</div>
+	</div>
 </section>
-<!-- //Banner Section -->
-<!-- Category Section -->
-<section class="job-category d-none">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <h2 class="title mb-4">{{"home.postResume" | translate}}</h2>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <a href="javascript:;" class="job-category-box">
-          <!-- <i class="flaticon-accounting"></i> -->
-          <h5>India <br>(60)</h5>
-        </a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <a href="javascript:;" class="job-category-box">
-          <!-- <i class="flaticon-accounting"></i> -->
-          <h5>USA <br>(40)</h5>
-        </a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <a href="javascript:;" class="job-category-box">
-          <!-- <i class="flaticon-accounting"></i> -->
-          <h5>Canada <br>(20)</h5>
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- //Category Section -->
+<!-- //Login Section -->
 
  <!-- Company Section -->
  <section class="top-companies">
@@ -168,141 +115,129 @@
   </section>
   <!-- //Company Section -->
 
-
-  <!-- SAPW Info Section -->
-<section class="sapw-info">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8">
-        <div class="heading">
-          <h5>Recruitment Technology</h5>
-          <h1>Solving Recruitment Using Technology</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique euismod lorem, a consequat orci consequat.</p>
-        </div>
-        <div class="mt-5 d-flex">
-          <div class="card mr-3">
-            <div class="media">
-              <img src="assets/images/sapw-info-icon1.png" class="mr-3" >
-              <div class="media-body">
-              <h3 class="mt-0">Tech Heading One</h3>
-              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.</p>  </div>
-            </div>
-          </div>
-          <div class="card ml-2">
-            <div class="media">
-              <img src="assets/images/sapw-info-icon2.png" class="mr-3" >
-              <div class="media-body">
-              <h3 class="mt-0">Tech Heading Two</h3>
-              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus Cras purus odio.</p>  </div>
-            </div>
-          </div>
-        </div>
-        <div class="mt-4 d-flex">
-          <div class="card mr-3">
-            <div class="media">
-              <img src="assets/images/sapw-info-icon3.png" class="mr-3" >
-              <div class="media-body">
-              <h3 class="mt-0">Tech Heading Three</h3>
-              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque.</p>  </div>
-            </div>
-          </div>
-          <div class="card  ml-2">
-            <div class="media">
-              <img src="assets/images/sapw-info-icon4.png" class="mr-3" >
-              <div class="media-body">
-              <h3 class="mt-0">Tech Heading Four</h3>
-              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus Cras purus odio.</p>  </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-  <!-- //SAPW Info Section -->
-
-  <!-- Video Info Section -->
-<section class="video-info">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="section-title">
-          <h1>Modern Day Staffing Company</h1>
-          <span class="section-title-bg">SAP world </span>
-          <h5>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan.</h5>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-6 pr-5">
-        <div class="video-sec">
-          <video width="100%" controls>
-            <source src="assets/images/employer-video.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="heading">
-          <h4>Find the Employees</h4>
-          <h2>Hire Your Next Candidate On Eazy Recruitz</h2>
-        </div>
-        <p class="mt-3">Sed et condimentum quam. Nunc dictum erat ut ante aliquam porttitor. Donec diam eros, bibendum et scelerisque egestas, aliquet ut nulla.</p>
-      </div>
-      <div class="col-lg-6 pl-5">
-        <div class="video-sec">
-          <video width="100%" controls>
-            <source src="assets/images/jobseeker-video.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="heading">
-          <h4>Find Your Right Place</h4>
-          <h2>Explore Your Career Path With Eazy Recruitz</h2>
-        </div>
-        <p class="mt-3">Fusce pretium, dui placerat laoreet consectetur, nibh diam accumsan enim, sed fringilla turpis quam quis ex. Mauris a rhoncus tortor, a cursus urna.</p>
-      </div>
-    </div>
-  </div>
-  </section>
-  <!-- //Video Info Section -->
-
-
-  <!-- SAPW Features Section -->
-<section class="sapw-features">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="section-title">
-          <h1>Awesome Features</h1>
-          <span class="section-title-bg">SAP world </span>
-          <h5>Maecenas feugiat, lectus vitae luctus feugiat, nulla nisl dignissim velit, nec malesuada ligula orci et metus.</h5>
-        </div>
-      </div>
-    </div>
-    <div class="row my-4">
-      <div class="col-lg-7 pr-5">
-        <h3>First Title </h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text. Maecenas feugiat, lectus vitae luctus feugiat, nulla nisl dignissim velit.</p>
-
-        <p>Maecenas feugiat, lectus vitae luctus feugiat, nulla nisl dignissim velit, nec malesuada ligula orci et metus. Fusce pretium, dui placerat laoreet consectetur, nibh diam accumsan enim, sed fringilla turpis quam quis.</p>
-
-        <a class="text-green font-weight-bold" href="javascript:;">Read More</a>
-      </div>
-      <div class="col-lg-5">
-        <img src="assets/images/website-screen1.png" class="img-fluid">
-      </div>
-    </div>
-    <div class="row my-5">
-      <div class="col-lg-5">
-        <img src="assets/images/website-screen2.png" class="img-fluid">
-      </div>
-      <div class="col-lg-7 pl-5">
-        <h3>Second Title </h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text. Maecenas feugiat, lectus vitae luctus feugiat, nulla nisl dignissim velit.</p>
-
-        <p>Maecenas feugiat, lectus vitae luctus feugiat, nulla nisl dignissim velit, nec malesuada ligula orci et metus. Fusce pretium, dui placerat laoreet consectetur, nibh diam accumsan enim, sed fringilla turpis quam quis.</p>
-
-        <a class="text-green font-weight-bold" href="javascript:;">Read More</a>
-      </div>
-    </div>
-  </div>
-</section>
-  <!-- //SAPW Features Section -->
+	<!-- SAPW Info Section -->
+	<section class="sapw-info">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8">
+					<div class="heading">
+						<h1>Solving recruitment sensibly</h1>
+						<h5>Study says employer make up their mind in 7.4 seconds for screening a profile. We deliver the much-needed details in a platter.</h5>
+						
+					</div>
+					<div class="mt-5 d-flex">
+						<div class="card mr-3">
+							<div class="media">
+								<img src="assets/images/sapw-info-icon1.png" class="mr-3">
+								<div class="media-body">
+									<h3 class="mt-0">Matches</h3>
+									<p>View matches based on your must have, good to have, optional</p>
+								</div>
+							</div>
+						</div>
+						<div class="card ml-2">
+							<div class="media">
+								<img src="assets/images/sapw-info-icon2.png" class="mr-3">
+								<div class="media-body">
+									<h3 class="mt-0">Compare profile</h3>
+									<p>Compare multiple profiles, jobs in a single view</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="mt-4 d-flex">
+						<div class="card mr-3">
+							<div class="media">
+								<img src="assets/images/sapw-info-icon3.png" class="mr-3">
+								<div class="media-body">
+									<h3 class="mt-0">Holistic view</h3>
+									<p> View whats missing, whats matching and whats more in a profile against your post </p>
+								</div>
+							</div>
+						</div>
+						<div class="card  ml-2">
+							<div class="media">
+								<img src="assets/images/sapw-info-icon4.png" class="mr-3">
+								<div class="media-body">
+									<h3 class="mt-0">Full control</h3>
+									<p>Manage your profile what to display and what not to </p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- //SAPW Info Section -->
+	
+	<!-- Contact Form Section -->
+	<section class="contact-form ">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="section-title">
+						<h1>Get in touch with us</h1>
+						<span class="section-title-bg">CONTACT </span>
+						<h5>&nbsp;</h5>
+					</div>
+				</div>
+				<div class="col-lg-6 cform-img">
+					<ul class="contact-info">
+						<li class="d-flex">
+							<div class="icon">
+								<i class="fas fa-map-marker-alt"></i>
+							</div> 
+							<div class="text">
+								<h4>Location</h4>
+								<span>Chennai, Tamilnadu,<br> INDIA</span>
+							</div> 
+						</li>
+						<li class="d-flex">
+							<div class="icon">
+								<i class="fas fa-mobile-alt"></i>
+							</div>
+							<div class="text">
+								<h4>Phone</h4>
+								<span>+91-123-456-7890 <br>+91-123-456-7890</span>
+							</div>
+						</li>
+						<li class="d-flex">
+							<div class="icon">
+								<i class="fas fa-paper-plane"></i>
+							</div>
+							<div class="text">
+								<h4>Email</h4>
+								<span>info@sapworld.com<br>admin@sapworld.com</span>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="col-lg-6 bg-light">
+					<form class="p-5">
+						<div class="form-group">
+							<label>Your Name</label>
+							<input type="text" class="form-control" placeholder="Your Full Name">
+						</div>
+						<div class="form-group">
+							<label for="exampleFormControlInput1">Your Email</label>
+							<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Email Address">
+						</div>
+						<div class="form-group">
+							<label>Subject</label>
+							<input type="text" class="form-control" placeholder="Subject">
+						</div>
+						<div class="form-group">
+							<label>Your Message</label>
+							<textarea class="form-control" placeholder="Message" rows="5"></textarea>
+						</div>
+						<div class="form-group mt-5">
+							<button type="button" class="btn btn-theme-blue btn-block btn-lg">Send Message</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- //Contact Form  Section -->
