Created country wise visa type validation

--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -242,8 +242,8 @@
 							(matChipInputTokenEnd)="add($event)">
 					</mat-chip-list>
 					<mat-autocomplete #auto="matAutocomplete" (optionSelected)="selSug($event.option.value)">
-						<mat-option *ngFor="let items of filterVisatype " [value]="items.visa" >
-							{{items.visa}}
+						<mat-option *ngFor="let items of filterVisatype " [value]="items" >
+							{{items}}
 						</mat-option>
 					</mat-autocomplete>
 				</mat-form-field>
