--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -166,7 +166,7 @@
 	</div>
 	<div class="row mt-2">
 		<div class="col-md-12 mb-2">
-			<label>{{"jobs.perksBenfits" | translate}}</label>
+			<h6 class="font-weight-bold mb-2">{{"jobs.perksBenfits" | translate}}</h6>
 		</div>
 		<div class="col-md-3" formGroupName="health_wellness">
 			<h6>{{"jobs.healthWellness" | translate}}</h6>
