--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -97,8 +97,8 @@
 						<input numbersOnly formControlName="experience" type="text" class="form-control" placeholder="Exp">
 						<div class="input-group-append ">
 							<select formControlName="exp_type" class="input-group-text" id="basic-addon2">
-								<option value="years">Yrs</option>
-								<option value="months">Mon</option>
+								<option value="years">years</option>
+								<option value="months">months</option>
 							</select>
 						</div>
 						<app-control-messages [control]="ticket['controls']['experience']"></app-control-messages>
