--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-layout/create-candidate-layout.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-layout/create-candidate-layout.component.html
@@ -22,7 +22,7 @@
             [createCandidateForm]="candidateForm">
           </app-create-candidate-header>
 
-          <div class="tab-content" [@animSlider]="slidingCounter">
+          <div class="tab-content" [@animSlider]="slidingCounter" style="min-height: 30rem;">
 
             <app-create-candidate-personal-details
             [userDetails]="userInfo"
