--- a/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
@@ -13,7 +13,7 @@
 			</div>
 			<div class="col-lg-2 col-md-2 matches-10" *ngIf="!(ticket.value.id <=5)">
 				<button type="button" class="text-danger btn p-0 btn-small"
-					style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemoveOthers(i)"><i class="fas fa-times"></i></button>
+					style="line-height: 1.75; padding: .5rem 1.0rem;border:none !important;" (click)="onRemoveOthers(i)"><i class="fas fa-times"></i></button>
 			</div>
 		</ng-container>
 	</div>
