--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -174,7 +174,7 @@
 				</a> -->
 				<div style="top:-35px;position: absolute;left: 10px;" >					
 						<span class="font-weight-bold" style="line-height: 28px;">  {{"shared.youHave" | translate}} {{matchingJobMeta?.count}} {{"shared.matches" | translate}}
-						<button type="button" (click)="!isMultipleMatches && onViewOtherMatches()" class="btn d-none-content btn-outline-blue btn-sm ml-2 " style=" z-index:99;width: 70px;">{{"shared.viewAll" | translate}}</button>
+						<button type="button" *ngIf="!isMultipleMatches" (click)="!isMultipleMatches && onViewOtherMatches()" class="btn d-none-content btn-outline-blue btn-sm ml-2 " style=" z-index:99;width: 70px;">{{"shared.viewAll" | translate}}</button>
 						 </span>	
 				</div>
 				<div class="matchCount" style="top:-45px;">{{page}}/{{matchingJobMeta?.count}}</div>
