--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -9,7 +9,10 @@
 /*======================================
 //--//-->   STYLES GENERALES
 ======================================*/
-
+.input-group-text {
+    padding: 0.375rem 0.25rem;
+	text-align: left;
+}
 body {
     padding: 0;
     margin: 0;
